# ai-learning-notebooks

./: .gitignore  README.md  pyproject.toml  utils.py
db/similarity-search-101-chroma/: chroma.sqlite3
notebooks/: similarity-search-101.ipynb  template_nlp_con_hugging_face.ipynb
notebooks/embeddings-nlp-platzi/: 3_embeddings_gensim_dataset.ipynb  embeddings_1_sentence_similarity.ipynb
