[tool.poetry]
name = "similarity-search-101"
version = "0.1.0"
description = ""
authors = ["Nestor Mamani <nmamanipantoja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.4"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
