[tool.poetry]
name = "similarity-search-101"
version = "0.1.0"
description = ""
authors = ["Nestor Mamani <nmamanipantoja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.4"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
langchain = "^0.0.305"
unstructured = "^0.10.18"
markdown = "^3.4.4"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.13"
datasets = "^2.14.5"
evaluate = "^0.4.0"
accelerate = "^0.23.0"
transformers = {extras = ["torch"], version = "^4.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
